# aws-token-updater

./: .pre-commit-config.yaml  README.md  aws-token-updater.py  pyproject.toml
.github/workflows/: build.yml  check-import-sorting.yml  publish.yml  release.yml  test.yml
aws_token_updater/: cli.py
tests/: test_aws_token_updater.py
